💄 Fix map clipping outside of frame

--- a/src/TabbedView.css
+++ b/src/TabbedView.css
@@ -123,4 +123,5 @@ background: none;
   flex-grow: 1;
   margin: 10px;
   border: 0;
+  max-width: 100%;
 }
